style.css
body
{
    margin:2px;
    min-height:auto;

    background:
        radial-gradient(circle at top left,
            rgba(0,255,180,0.08),
            transparent 30%),

        radial-gradient(circle at top right,
            rgba(70,130,255,0.08),
            transparent 35%),

        radial-gradient(circle at bottom center,
            rgba(0,100,255,0.06),
            transparent 40%),

        linear-gradient(
            135deg,
            #02040a 0%,
            #050816 40%,
            #090f1f 70%,
            #02040a 100%
        );

    background-attachment: fixed;
}
.header
{
  margin:0px;
  padding:10px;
}
.navbar{
    background: linear-gradient(
        135deg,
        #000000,
        #111111,
        #1b1b1b,
        #000000
    );
    background-attachment: fixed;
    color: white;
    color:white;
    display:flex;
    justify-content:space-between;
    align-items:center;
    padding:15px 50px;
}

.logo
{
    object-fit: cover;
    font-size:20px;
    font-weight:bold;
    width:60px;
    height:60px;
}
.name
{
    color: aliceblue;
}
.img{
    max-width:100%;
    height:auto;
}
.nav-links
{
    list-style:none;
    display:flex;
}
.nav-links li
{
    margin-left:20px;
}

.nav-links li a
{
    color:white;
    text-decoration:solid;
    font-size:20px;
    transition:0.3s;
}
.nav-links li a:hover
{
    color:#00bfff;
}
.status-badge
{
    display:inline-flex;
    align-items:center;
    gap:12px;
    margin-top: 10px;
    padding:12px 24px;

    color:#67f5d2;
    font-size:15px;
    font-weight:600;
    letter-spacing:3px;
    text-transform:uppercase;

    background:rgba(12,45,48,.6);
    border:1px solid rgba(86,230,200,.35);
    border-radius:40px;

    backdrop-filter:blur(8px);

    box-shadow:
        inset 0 0 12px rgba(103,245,210,.08),
        0 0 20px rgba(0,255,180,.05);

    transition:.3s;
}
.internship-badge
{
    margin-top: 2px;
}
.status-badge:hover
{
    transform:translateY(-2px);
    box-shadow:
        0 0 25px rgba(103,245,210,.2);
}
.dot
{
    width:8px;
    height:8px;
    border-radius:50%;
    background:#67f5d2;

    box-shadow:0 0 10px #67f5d2;
}
.section-title
{
    color:#67f5d2;
    letter-spacing:6px;
    font-size:25px;
    margin-bottom:20px;
    text-align:center;
}
.home
{
    width:100%;
    margin:auto;
    padding:80px 0;
}
.my-image
{
    width:400px;
    height:400px;
    justify-content:center;
    align-items:center;
    border-radius:50%;
    overflow:hidden;
    background:#111827;
    margin: 100px;
}
.pfp
{
    width:100%;
    height:100%;
    
}
.contant
{
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.about
{
    max-width:700px;
    gap:500px;
    min-height:auto;
}
.branch
{
    max-width:650px;
    color:white;
}
.name
{
    font-size:55px;
    margin-bottom:15px;
}
.my-para
{
    color:#9aa0a9;
    font-size:20px;
    line-height:1.8;
    margin-bottom:30px;
}
.experience
{
    width:100%;
    margin:auto;
    padding:80px 0;
}
.project-grid
{
     display: flex;
    gap: 30px;
    justify-content: flex-start;
    flex-wrap: wrap;
}
.project-box
{
    flex: 1;
    min-width: 340px;
    max-width: 24%;
    color: white;
    border-radius: 12px;
    border: 1px solid #e6e4de;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    overflow: hidden;
    transition: transform 0.25s ease, box-shadow 0.25s ease, border-color 0.25s ease;
    background:linear-gradient(
        135deg,
        rgba(255,255,255,.10),
        rgba(255,255,255,.03)
    );

    backdrop-filter:blur(18px);
    -webkit-backdrop-filter:blur(18px);

    border:1px solid rgba(255,255,255,.12);

    border-radius:25px;

    box-shadow:
        0 8px 32px rgba(0,0,0,.4),
        inset 0 1px 1px rgba(255,255,255,.1);
}
.project-content
{
    padding: 25px 25px 15px 25px;
}
.project-tag
{
    font-size: 0.75rem;
    font-weight: 700;
    color: #4a6b5d;
    text-transform: uppercase;
    letter-spacing: 0.8px;
    display: block;
    margin-bottom: 8px;
}
.main-line
{
    color: #ffffff;
}
.para-1
{
    color: rgb(139, 139, 139);
}
.head-3
{
    color: rgb(166, 165, 165);
}
.projects
{

    width:100%;
    margin:auto;
    padding:80px 0;
}
.thing
{
    text-align: center;
    color: rgb(255, 255, 255);
    font-size:50px;
    font-weight:800;
}
.coming-soon
{
    color: white;
}
.project-card
{
    background:#101b30;
    border:1px solid rgba(255,255,255,.08);
    border-radius:28px;
    min-height:500px;
    display:flex;
    flex-direction:column;
    justify-content:center;
    align-items:center;
    text-align:center;
    padding:50px;
}
.para
{
    max-width:600px;
    color:#7182a8;
    font-size:24px;
    line-height:1.7;
    margin-bottom:40px;
}
.btn
{
    display:inline-flex;
    align-items:center;
    gap:12px;
    padding:18px 35px;
    text-decoration:none;
    color:white;
    border-radius:15px;
    border:1px solid #26344d;
    transition:.3s;
}
.contact
{
    text-align:center;
    width:100%;
    max-width:1000px;
    text-align:center;
    padding:80px 20px;
}
.lbt
{
    text-align: center;
    align-items: center;
    justify-content: space-around;
}
.gradient
{
    border-radius: 10px;
    background:linear-gradient(90deg,#7b8cff,#ff72b6);
}
.description-outer
{
    background:linear-gradient(
        135deg,
        rgba(255,255,255,.10),
        rgba(255,255,255,.03)
    );

    backdrop-filter:blur(18px);
    -webkit-backdrop-filter:blur(18px);

    border:1px solid rgba(255,255,255,.12);

    border-radius:25px;

    box-shadow:
        0 8px 32px rgba(0,0,0,.4),
        inset 0 1px 1px rgba(255,255,255,.1);
}
.description-inner
{

    margin:40px auto;
    max-width:700px;
    color:#ffffff;
    font-size:24px;
    line-height:1.8;
}
.buttons
{

    display:flex;
    justify-content:center;
    gap:20px;
    flex-wrap:wrap;
    margin:10px;
}
.btn
{

    display:flex;
    align-items:center;
    gap:12px;
    padding:18px 35px;
    border-radius:18px;
    text-decoration:wavy;
    font-size:22px;
    font-weight:600;
    transition:.3s;
}
.primary
{
    background:linear-gradient(90deg,#67f5d2,#8a8dff);
    color:#07111d;
}
.secondary
{

    background:transparent;

    color:white;

    border:1px solid #1f2d48;
}
@media(max-width:768px)
{

.btn
{

    width:100%;
    justify-content:center;
}

.buttons
{

    flex-direction:column;
}
}
footer
{
    background:#020617;
    padding:30px 20px;
    text-align:center;
    color:#bfc7d5;
}
footer p
{
    margin-bottom:15px;
    font-size:14px;
}
.footer-links
{
    display:flex;
    justify-content:center;
    gap:25px;
    list-style:none;
    padding:0;
    margin:0;
}
.footer-links a{
    color:white;
    text-decoration:none;
}
.copy-right
{
color: aliceblue;
text-align: center;
align-items: center;
}

